--- a/Dockerfile.df
+++ b/Dockerfile.df
@@ -1,14 +1,28 @@
 FROM public.ecr.aws/lambda/python:3.9
 
-# Copy function code
-COPY lambda_function.py ${LAMBDA_TASK_ROOT}
+# Instale as dependências do Chrome
+# RUN yum update -y 
+RUN yum install -y wget unzip
 
-# Install the binary packages using yum install
-RUN yum install -y curl
+RUN echo -e '[google-chrome]\n\
+name=google-chrome\n\
+baseurl=http://dl.google.com/linux/chrome/rpm/stable/$basearch\n\
+enabled=1\n\
+gpgcheck=1\n\
+gpgkey=https://dl-ssl.google.com/linux/linux_signing_key.pub' > /etc/yum.repos.d/google-chrome.repo
+RUN yum update -y && yum install -y google-chrome-stable
+
+
+# Baixe e instale o ChromeDriver
+RUN curl https://chromedriver.storage.googleapis.com/109.0.5414.74/chromedriver_linux64.zip -o chromedriver_linux64.zip
+RUN unzip chromedriver_linux64.zip -d /usr/local/bin/
+
+# Copy function code
+# COPY lambda_function.py ${LAMBDA_TASK_ROOT}
+COPY requirements.txt ${LAMBDA_TASK_ROOT}/requirements.txt
+WORKDIR ${LAMBDA_TASK_ROOT}
+RUN pip install -r requirements.txt
+COPY . ${LAMBDA_TASK_ROOT}
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.lambda_handler" ]
-
-# CREATE IMAGE: docker build -t get-stoks-by-filter -f Dockerfile.df .
-# RUN IMAGE: docker run -p 9000:8080 -d get-stoks-by-filter
-# CALL: curl -XPOST "http://localhost:9000/2015-03-31/functions/function/invocations" -d {}
