change command py test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: us-east-2
 
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
@@ -33,7 +33,7 @@ jobs:
     - name: Test
       run: |
         source venv/bin/activate
-        pytest
+        py -m unittest tests/*
 
     - name: Zip function
       run: zip -r function.zip .
